scripts for presentation

--- a/notebooks/eda_ecg_without_mergins_silence_as_baseline.ipynb
+++ b/notebooks/eda_ecg_without_mergins_silence_as_baseline.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "8492fed4",
    "metadata": {},
    "outputs": [],
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9a42a15e",
    "metadata": {},
    "outputs": [
@@ -2409,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 269,
    "id": "e52860f3",
    "metadata": {},
    "outputs": [
@@ -3166,7 +3166,8 @@
     }
    ],
    "source": [
-    "data_full.EventLabel.value_counts()"
+    "data_full.EventLabel.value_counts()\n",
+    "# normalize by the num of seconds"
    ]
   },
   {
@@ -3210,7 +3211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "id": "f34af24a",
    "metadata": {},
    "outputs": [
@@ -3418,7 +3419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "id": "2533483d",
    "metadata": {},
    "outputs": [
