--- a/notebooks/empatica_filtered.ipynb
+++ b/notebooks/empatica_filtered.ipynb
@@ -1235,7 +1235,9 @@
    "id": "d113d9d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# CHECK IF THESE PEAKS == MOS score for the same participants"
+   ]
   }
  ],
  "metadata": {
